[project]
name = "ktaga-lab"
version = "0.1.8"
description = "Drivers and dependencies for the experimental setup and tools for data acquisition and analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.5",
    "dash>=2.18.0",
    "hvplot>=0.10.0",
    "ipywidgets>=8.1.5",
    "kaleido==0.2",
    "lmfit>=1.3.2",
    "matplotlib>=3.9.2",
    "nbconvert>=7.16.4",
    "nidaqmx>=1.0.1",
    "pandas>=2.2.2",
    "pandoc>=2.4",
    "pyserial>=3.5",
    "pythonnet>=3.0.3",
    "pyvisa>=1.14.1",
    "qcodes>=0.48.0",
    "scikit-rf>=1.3.0",
    "scipy>=1.14.1",
    "sympy>=1.13.2",
    "xarray>=2024.9.0",
    "zhinst>=24.7.2",
    "zhinst-qcodes>=0.5.3",
    "tqdm>=4.66.5",
    "holoviews[recommended]>=1.19.1",
    "ruff>=0.6.4",
    "langchain>=0.0.27",
    "langchain-openai>=0.1.25",
    "jupyter-ai>=2.23.0",
]

[project.optional-dependencies]
kt = [
    "jupyterlab-theme-solarized-dark>=3.0.1",
    "jupyterlab-vim>=4.1.3",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["ktaga_lab"]

[tool.hatch.build.targets.wheel]
packages = ["ktaga_lab"]
