[project]
name = "ktaga-lab"
version = "0.1.12"
description = "Drivers and dependencies for the experimental setup and tools for data acquisition and analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.5",
    "dash>=2.18.0",
    "hvplot>=0.10.0",
    "lmfit>=1.3.2",
    "nbconvert>=7.16.4",
    "nidaqmx>=1.0.1",
    "pandoc>=2.4",
    "pyserial>=3.5",
    "pythonnet>=3.0.3",
    "qcodes>=0.48.0",
    "scikit-rf>=1.3.0",
    "sympy>=1.13.2",
    "holoviews[recommended]>=1.19.1",
    "ruff>=0.6.4",
    "jupyter-ai>=2.24.0",
    "kaleido==0.2.1",
]

[project.optional-dependencies]
kt = [
    "jupyterlab-theme-solarized-dark>=3.0.1",
    "jupyterlab-vim>=4.1.3",
]
zurich = [
    "zhinst-qcodes>=0.5.4",
    "zhinst>=24.7.3",
]

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["ktaga_lab"]

[tool.hatch.build.targets.wheel]
packages = ["ktaga_lab"]
